# slam

./: LICENSE  Readme.md  config.py  ext_boost_wrapper.cpp  ext_screen_layout.cpp  ext_screen_layout.h  isl  layout.py  main.py  readme  setup.py  slam_util.c  util.py  xcb_backend.py  xclient.py
examples/: slam  test
ext/: boost_wrapper.cpp  screen_layout.cpp  screen_layout.h
rs/: Cargo.toml  LICENSE  Readme.md
rs/examples/: layout.rs
rs/src/: database.rs  geometry.rs  layout.rs  lib.rs  main.rs  relation.rs  transform.rs  xcb.rs
rs/src/layout/: auto.rs  compute_rects.rs
slam/: __init__.py  layout.py  util.py  xcb_backend.py
slam/plugins/: background.py  backlight.py
