[package]
name = "slam"
version = "0.1.0"
edition = "2021"
authors = ["François Gindraud <francois.gindraud@gmail.com>"]
description = "Save multi-screen layouts and restore them when needed"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
dirs = "4.0" # config dir
clap = { version = "3.1", features = ["derive"] } # cmd line parsing
log = "0.4"
simple_logger = "2"

# xcb backend, defines a feature
xcb = { version = "1.1", features = ["randr"], optional = true }