[package]
name = "slam"
version = "0.1.0"
edition = "2021"
authors = ["François Gindraud <francois.gindraud@gmail.com>"]
description = "Save multi-screen layouts and restore them when needed"
repository = "https://github.com/lereldarion/slam"
license = "MIT"
keywords = ["screen", "daemon", "x11"]

[dependencies]
anyhow = "1.0"
dirs = "4.0" # config dir
clap = { version = "3.1", features = ["derive"] } # cmd line parsing
log = "0.4"
simple_logger = "2"
good_lp = "1.3" # ilp library for Layout computations

# xcb backend: feature "xcb"
xcb = { version = "1.1", features = ["randr"], optional = true }


[dev-dependencies]
# Drawing for layout examples
tiny-skia = "0.6.3"
palette = "0.6.0"

[[example]]
name = "layout"
