[package]
name = "slam"
version = "0.1.0"
edition = "2021"
authors = ["François Gindraud <francois.gindraud@gmail.com>"]
description = "Save multi-screen layouts and restore them when needed"
repository = "https://github.com/lereldarion/slam"
license = "MIT"
keywords = ["screen", "daemon", "x11"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] } # cmd line parsing
bitflags = "1.3"

# Logging stuff
log = "0.4"
simple_logger = "2"

osqp = "0.6.2" # quadratic solver for layout inference

# Database related
dirs = "4.0" # config dir
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# xcb backend: feature "xcb"
xcb = { version = "1.1", features = ["randr"], optional = true }

[dev-dependencies]
# Drawing for layout examples
tiny-skia = "0.6.3"
palette = "0.6.0"

[[example]]
name = "layout"
